--- a/app/webroot/sass/_global/_page.scss
+++ b/app/webroot/sass/_global/_page.scss
@@ -37,7 +37,8 @@ footer {
 
 h1 {
 	line-height: 1.1;
-	margin: 0 0 1rem;
+	margin: 1.3rem 0 2rem;
+	padding-right: 2rem;
 }
 
 ul {
